[fix] add book dialog overflow-x

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -43,7 +43,7 @@
     --dark-red: #9b0d0d;
     --green: rgb(30, 146, 30);
     --dark-green: rgb(14, 129, 14);
-    
+
     #footer-tod-logo {
         filter: invert();
     }
@@ -621,7 +621,8 @@ dialog#modal-container {
     /* outline: 1px solid red; */
     padding: 20px;
     width: 600px;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
     background-color: var(--modal-bg);
     border-radius: 5px;
     border: 2px solid var(--base-fg);
